# lemon-colonies

./: .gitignore  Cargo.toml  Makefile  README.md
app/: Cargo.toml  build.rs  index.html
app/locales/: de.yml  en.yml  fr.yml
app/public/: app.js  manifest.json  quad-net.js  storage.js  styles.css
app/src/: app.rs  bindings.rs  fps_counter.rs  game.rs  http.rs  i18n.rs  main.rs  server_time.rs  settings.rs  storage.rs  ui.rs  ws.rs
app/src/game/: atlas.rs  camera.rs  chunk.rs  data.rs  object_action.rs  object_hover.rs  object_place.rs  sprite.rs  world.rs
app/src/ui/: icon.rs  panels.rs  state.rs  widgets.rs  windows.rs
app/src/ui/panels/: action.rs  hover.rs  info.rs  meta.rs  sub_action.rs
app/src/ui/widgets/: connection_status.rs  debug.rs  detail_info.rs  generic_select.rs  hover_info.rs  icon_label.rs  object_data.rs  profile_menu.rs  purchase_object.rs  purchase_object_bar.rs  reset_slider.rs  settings.rs  toggle_button.rs  username.rs  window_button.rs
app/src/ui/windows/: debug.rs  settings.rs
app/src/ws/: fetchable.rs
core/: Cargo.toml
core/migration/: Cargo.toml
core/migration/src/: lib.rs  m20260409_181359_init_user.rs  m20260411_110822_init_chunk.rs  m20260411_111450_init_colony.rs  m20260420_121559_init_object.rs
core/src/: data.rs  error.rs  game.rs  lib.rs  lingo.rs  math.rs  types.rs
core/src/data/entity/: chunk.rs  colony.rs  colony_chunk.rs  mod.rs  object.rs  prelude.rs  user.rs  user_resources.rs
core/src/data/service/: chunk.rs  mod.rs  object.rs  user.rs
core/src/data/store/: chunk.rs  colony.rs  colony_chunk.rs  mod.rs  object.rs  user.rs  user_resources.rs
core/src/game/: chunk.rs  config.rs  icon.rs  object.rs  resource.rs  terrain.rs
core/src/game/colony/: placement.rs
core/src/game/object/: command.rs  data.rs  kind.rs  purchase.rs  visuals.rs
core/src/game/object/data/: bush.rs
core/src/math/: circle.rs  coords.rs  point.rs  rect.rs
core/src/messages/: client.rs  server.rs
core/src/messages/client/: object_placement.rs  object_purchase.rs
core/src/messages/server/: chunk_update.rs
core/src/types/: chunk_visibility.rs  permissions.rs  user_info.rs
docker/: .env.dist  Dockerfile  Dockerfile.dev  docker-compose.yml  prometheus.yml
docker/grafana/dashboards/: performance.json
server/: Cargo.toml
server/src/: api.rs  config.rs  error.rs  integrations.rs  layers.rs  main.rs  state.rs  websocket.rs
server/src/api/: error.rs  routes.rs
server/src/api/layers/: session.rs
server/src/api/routes/: auth.rs  me.rs
server/src/api/routes/auth/: discord.rs
server/src/integrations/: discord.rs
server/src/layers/: metrics.rs
server/src/websocket/: chunk_subscriptions.rs  connection.rs  rate_limiter.rs
