[package]
name = "lemon-colonies-app"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
lemon-colonies-core = { workspace = true }
anyhow = { workspace = true }
egui-macroquad = "0.17.3"
quad-net = "0.1.2"
strum = { workspace = true }
strum_macros = { workspace = true }