[package]
name = "lemon-colonies-app"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
lemon-colonies-core = { workspace = true, features = ["bitcode", "serde"] }
anyhow = { workspace = true }
egui-macroquad = "0.17.3"
egui-notify = "0.19.0"
egui-phosphor = { version = "0.9.0", default-features = false, features = ["regular"] }
quad-net = { git = "https://github.com/not-fl3/quad-net", rev = "31796d4ed5c9cce57c7702d18b6140d5ffacfccf" }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }