[package]
name = "lemon-colonies-core"
version = "0.1.0"
edition = "2024"

[features]
data = ["async-trait", "migration", "sea-orm"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
migration = { path = "migration", optional = true }
async-trait = { version = "0.1.89", optional = true }
bitcode = { workspace = true, optional = true }
sea-orm = { version = "2.0.0-rc.37", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }