[package]
name = "lemon-colonies-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lemon-colonies-core = { workspace = true, features = ["data"] }
axum = "0.8.8"
thiserror = { workspace = true }
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
