[package]
name = "lemon-colonies-server"
version = "0.1.0"
edition = "2024"

[dependencies]
lemon-colonies-core = { workspace = true, features = ["bitcode", "data", "serde"] }
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6.1.0"
futures-util = "0.3.32"
oauth2 = "5.0.0"
petname = "2.0.2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = { version = "0.14.0", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }